--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,17 @@
 <html>
     <head>
         <title>React Webpack template</title>
+        <link href="/css/main.css" rel="stylesheet"/>
     </head>
     <body>
-        <div id="root">If you see this then something is wrong.</div>
+        <secion class="container">
+            <header>
+                <h1>Muscle Memory Password Trainer</h1>
+            </header>
+            <div id="app">
+                
+            </div>
+        </section>
         <script src="/js/browser-bundle.js"></script>
     </body>
 </html>
