WIP: Saving a ton of work

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>React Webpack template</title>
+        <title>Muscle Memory Password Trainer</title>
         <link href="/css/main.css" rel="stylesheet"/>
     </head>
     <body>
@@ -15,3 +15,4 @@
         <script src="/js/browser-bundle.js"></script>
     </body>
 </html>
+
