--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     </head>
     <body>
         <secion class="container">
-            <header>
-                <h1>Muscle Memory Password Trainer</h1>
-            </header>
-            <div id="app">
-                
+            <div class="hero">
+                <header>
+                    <h1>Muscle Memory Password Trainer</h1>
+                </header>
+                <div id="app">
+                    
+                </div>
             </div>
         </section>
         <script src="/js/browser-bundle.js"></script>
