updates for gh-pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Muscle Memory Password Trainer</title>
-        <link href="./css/main.css" rel="stylesheet"/>
+        <link href="css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <secion class="container">
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </section>
-        <script src="./js/browser-bundle.js"></script>
+        <script src="js/browser-bundle.js"></script>
     </body>
 </html>
 
