css fix for firefox because box-sizing+min-height+sans height = sad FF experience

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   </head>
   <body>
     <secion class="container">
-      <div id="app">
-
-      </div>
-        </section>
-        <script src="js/browser-bundle.js"></script>
+      <div id="app"></div>
+    </section>
+    <script src="js/browser-bundle.js"></script>
   </body>
 </html>
