fixes some styles and adds footer to html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <link href="css/main.css" rel="stylesheet"/>
   </head>
   <body>
+
     <secion class="container">
       <div id="app"></div>
+
+      <footer>
+        <p>coded with aloha.</p>
+      </footer>
     </section>
+    
     <script src="js/browser-bundle.js"></script>
   </body>
 </html>
