--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <div id="app"></div>
 
       <footer>
-        <p>coded with aloha.</p>
-      </footer>
+      <p>created by <a href="//github.com/sgnl">ray farias</a>. coded with aloha</p>
+    </footer>
     </section>
     
     <script src="js/browser-bundle.js"></script>
