adds copy to faq

--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
         <ul>
           <li><a href="/">&lt; back to application</a></li>
           <li><a href="//rayfarias.com">about me</a></li>
-          <li><a href="/">code on github &gt;</a></li>
+          <li><a href="//github.com/sgnl/fuzzy-pw-react">code on github &gt;</a></li>
         </ul>
       </nav>
 
@@ -21,7 +21,7 @@
           First off, <a href="//xkcd.com/936/">passphrases are cool</a>. A friend of mine uses a muscle memory password. The basic ideal is that someone has practiced enough to know what fingers to wiggle on a keyboard to achieve the password but this person does not know what keys are actually typed (you could sit down and figure it out, but that's no fun).
         </p>
         <p>
-          I built this application as a practice space for anyone who wants to utilize this.
+          I built this to learn react (sans redux implementation).
         </p>
       </article>
 
@@ -45,7 +45,7 @@
           <li>Webpack</li>
         </ul>
       </article>
-      
+
     </div>
     
     <script src="js/browser-bundle.js"></script>
